****************************************************************************

 - [QTBUG-71515] The Qml profiling plugin now inserts memory events in the
   correct order. This is important for the client to show a meaningful
   memory profile.
 - [QTBUG-71768] The qmlpreview tool does a better job at watching files for
   changes, especially in the common case that editors replace files, rather
   than change them in place.
 - [QTBUG-71037] The QML debugger will not crash the application on
   encountering certain dynamically created objects anymore.

****************************************************************************
*                                  QtQuick                                 *
****************************************************************************

 - [QTBUG-71972] PinchHandler and DragHandler activate only when they grab points.
 - [QTBUG-71466][QTBUG-71970] TapHandler resets state when giving up grab.
 - [QTBUG-71431] PointHandler distributes simultaneous touch presses properly.
 - [QTBUG-71955] TapHandler ignores scroll events and native gestures.
 - [QTBUG-71317] Event Handlers can now be used in Windows and Dialogs.
 - [QTBUG-71427] Event Handlers now function properly when created dynamically.
 - [QTBUG-72376] In Text with StyledText textFormat, <s></s> and <del></del>
   tags will now be interpreted as strikethrough style.
 - [QTBUG-59310] Fixed vertical alignment of images in a text document.
 - [QTBUG-68863] Fixed updating of text nodes in QQuickTextEdit.
 - [QTBUG-71684] QQuickText: Signal content height/width changes also when resetting.
 - [QTBUG-72603] Fixed regression in border-top with high-dpi.
 - [QTBUG-65077] Fixed invalidation of m_cache while iterating qquickpixmapcache.
 - [QTBUG-71322] Disabled antialiased clipping when painting images.
 - [QTBUG-69290] Fixed leaking textures and animation resources in software backend.
 - [QTBUG-65236][QTBUG-71705] Fixed null pointer access in material cache.