@@ -66,6 +66,9 @@ information about a particular change.
  - [QTBUG-71955] TapHandler ignores scroll events and native gestures.
  - [QTBUG-71317] Event Handlers can now be used in Windows and Dialogs.
  - [QTBUG-71427] Event Handlers now function properly when created dynamically.
+ - [QTBUG-73137] The PinchHandler {min,max}imum{X,Y} properties that were
+   unintentionally included in the 5.12.0 release have now been deprecated.
+   Please use the xAxis and yAxis properties instead.
  - [QTBUG-72376] In Text with StyledText textFormat, <s></s> and <del></del>
    tags will now be interpreted as strikethrough style.
  - [QTBUG-59310] Fixed vertical alignment of images in a text document.
